k3s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: backend-strip-api

spec:
  stripPrefix:
    prefixes:
      - /api
