k3s/backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: enessermaxhaj/enescoffe-backend:v1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
