k3s/frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: enessermaxhaj/enescoffe-frontend:v1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 80
