k3s/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:17

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql


      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

      - name: postgres-init
        configMap:
          name: postgres-init
