k3s/services.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
    targetPort: 5432


---

apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  selector:
    app: backend

  ports:
  - port: 3000
    targetPort: 3000


---

apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
